--- a/src/ServiceManagement/ExpressRoute/ExpressRoute.Tests/ExpressRoute.Tests.csproj
+++ b/src/ServiceManagement/ExpressRoute/ExpressRoute.Tests/ExpressRoute.Tests.csproj
@@ -74,4 +74,10 @@
       <Name>ExpressRouteManagement</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.Threading.Tasks, Version=1.0.12.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\packages\Microsoft.Bcl.Async.1.0.168\lib\net40\Microsoft.Threading.Tasks.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
